--- a/src/lib/scss/font.scss
+++ b/src/lib/scss/font.scss
@@ -4,6 +4,7 @@
 		url('/fonts/FiraCode-Light.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
 		url('/fonts/FiraCode-Regular.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
 		url('/fonts/FiraCode-Medium.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -28,6 +31,7 @@
 		url('/fonts/FiraCode-SemiBold.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -36,6 +40,7 @@
 		url('/fonts/FiraCode-Bold.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
+	font-display: swap;
 }
 
 h1,
