Show current year

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
 
 {{ define "main" }}
 <h1>Modernity</h1>
-<h2>"Because it's already {year}"</h2>
+<h2>"Because it's already {{now.Year}}"</h2>
 <p>
   I believe that creating the technology of the future requires us to get rid of
   the technology of the past. The goal of Modernity is to encourage people to
